--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ IMG
 
 #platformsAndComing p
 {
+	position: relative;
 	font-size: 1.8em;
 	line-height: 0.3em;
 }
@@ -175,4 +176,25 @@ A.bigLink:visited
 	margin-left: auto;
     margin-right: auto;
 	max-width: 240px;
+}
+
+#stores
+{
+	position: relative;
+	text-align: center;
+	margin-right: 20%;
+	margin-left: 20%;
+	margin-bottom:11%;
+	max-width: 400px;
+}
+
+#prizes
+{
+	margin-bottom:2%;
+	display:table;
+	position:relative;
+	text-align: center;
+	width: 100%;
+	margin-left: auto;
+    margin-right: auto;
 }
